apps/base/erik-test/film.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film
  namespace: eriktest
  labels:
    app: film
spec:
  replicas: 1
  selector:
    matchLabels:
      app: film
  template:
    metadata:
      labels:
        app: film
    spec:
      nodeName: main
      containers:
        - name: film
          image: itzg/minecraft-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: film
              mountPath: /data
      volumes:
        - name: film
          persistentVolumeClaim:
            claimName: film
