apps/base/erik-test/mc2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc2
  namespace: eriktest
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "1-8.bacherik.de"
  labels:
    app: mc2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc2
  template:
    metadata:
      labels:
        app: mc2
    spec:
      containers:
        - name: mc2
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: mc2
              mountPath: /data
      volumes:
        - name: mc2
          persistentVolumeClaim:
            claimName: mc2
