apps/base/erik-test/mc3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc3
  namespace: eriktest
  labels:
    app: mc3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc3
  template:
    metadata:
      labels:
        app: mc3
    spec:
      containers:
        - name: mc3
          image: itzg/minecraft-server:latest
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: mc3
              mountPath: /data
      volumes:
        - name: mc3
          persistentVolumeClaim:
            claimName: mc3
