apps/base/erik-test/film-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: film
  namespace: eriktest
  annotations:
    mc-router.itzg.me/externalServerName: "film.bacherik.de"
    external-dns.alpha.kubernetes.io/hostname: "film.bacherik.de"
spec:
  selector:
    app: film
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
