apps/base/erik-test/mc1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc1
  namespace: eriktest
  annotations:
    mc-router.itzg.me/externalServerName: "1.10.bacherik.de"
    external-dns.alpha.kubernetes.io/hostname: "1.10.bacherik.de"
spec:
  selector:
    app: mc1
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
