apps/base/erik-test/mc3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc3
  namespace: eriktest
  annotations:
    mc-router.itzg.me/externalServerName: "1-21-5.bacherik.de"
    external-dns.alpha.kubernetes.io/hostname: "1.21.5.bacherik.de"
spec:
  selector:
    app: mc3
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
