apps/base/erik-test/mc1-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc1
  namespace: eriktest
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`mc1.bacherik.de`)
      services:
        - name: mc1
          port: 25565
  #tls:
    #passthrough: true
